# tslot

./: .gitignore  .isort.cfg  .pylintrc  .travis.yml  README.rst  broker.py  database.py  doodle.rst  mockdb.py  mockup.py  model.py  pyproject.toml  requirements.txt  setup.py  slot.py  time-reaper.py  timereaper.py  timetable.py  treaper.py  tslot.py  utils.py
css/: tslot.css
doc/: Makefile  conf.py  doodle.rst  index.rst  make.bat  mockup.py  vocab.rst  vocab.txt
doc/src/: architecture.rst  vocab.rst
poc/: anim_poc.py  column_width_poc.py  listview_poc.py  multithreading_poc.py  popup_poc.py  scroll_poc.py  serverthread_poc.py  shortcut_poc.py  signal_poc.py  signal_poc2.py  singleton_poc.py  size_poc.py  sqlalchemy_multi_poc.py  sqlalchemy_poc.py  tslot_table_poc.py
poc/alchemy/: simple_sqlalchemy.py  sqlalchemy_poc.py
poc/multi/: alchemy_multiwrite_with_processing.py  alchemy_multiwrite_with_threading.py  alchemy_session_close_with_processing.py  alchemy_with_processing.py  alchemy_with_processing_queue.py  alchemy_with_threading.py  alchemy_with_threading_queue.py  counting_with_threading.py  rwqueue_with_processing.py  rwqueue_with_threading.py  simple_processing_0.py  simple_processing_1.py  simple_threading_0.py  simple_threading_1.py
src/: broker.py  cache.py  font.py  model.py  scroll.py  slot.py  style.py  stylist.py  tick.py  types.py  utils.py
src/ai/: base.py  model.py
src/client/: __init__.py
src/common/: __init__.py  logger.py  sip_singleton.py
src/db/: broker.py  loader.py  loader_for_slots.py  (+9 more)
test/: conftest.py  test_broker.py
(+136 files in other folders)
