[tool.poetry]
name = "tslot"
version = "0.1.0"
description = ""
authors = ["Aleksandr Lisianoi <alisianoi@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.2"
SQLAlchemy = "^1.3.22"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
bandit = "^1.7.0"
pylint = "^2.6.0"
pytest = "^6.2.1"
pytest-qt = "^3.3.0"
pytest-cov = "^2.10.1"
pytest-xvfb = "^2.0.0"
pytest-repeat = "^0.9.1"
pytest-xdist = "^2.2.0"
Sphinx = "^3.4.1"
sphinx-rtd-theme = "^0.5.0"
sphinxcontrib-tikz = "^0.4.9"
python-language-server = {extras = ["all"], version = "^0.36.2"}
pyls-isort = "^0.2.0"
pyls-black = "^0.4.6"
black-macchiato = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
